welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:11: error: value recule is not a member of Unit
possible cause: maybe a semicolon is missing before `value recule'?
  }recule(H-1)
   ^